--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <div class="hero-badge">🔥 Full-Service HR Excellence Since 2005</div>
+            <div class="hero-badge"> Full-Service HR Excellence Since 2005</div>
             <h1>Stop Fighting Fires.<br><span>Ignite</span> Your People Strategy.</h1>
             <p class="hero-subtitle">From C-Suite recruiting to wellness concierge services – your complete human capital solution.</p>
             <p class="hero-description">We architect end-to-end people strategies that turn your biggest headache into your competitive advantage. Think less chaos, more chess moves.</p>
