Update and rename index (4).html to index.html

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <div class="hero-badge">🔥 Full-Service HR Excellence Since 2005</div>
+            <div class="hero-badge"> Full-Service HR Excellence Since 2005</div>
             <h1>Stop Fighting Fires.<br><span>Ignite</span> Your People Strategy.</h1>
             <p class="hero-subtitle">From C-Suite recruiting to wellness concierge services – your complete human capital solution.</p>
             <p class="hero-description">We architect end-to-end people strategies that turn your biggest headache into your competitive advantage. Think less chaos, more chess moves.</p>
@@ -641,7 +641,7 @@
                 <p>From executive search to wellness concierge – we don't just fill gaps, we build empires.</p>
             </div>
             
-            \1<div class="solution-card">
+            <div class="solution-card">
   <div class="solution-icon">🎯</div>
   <h3>Talent Architecture</h3>
   <p>Stop hoping the right people show up. We design magnetic employer brands and hiring systems that attract A-players like clockwork.</p>
