--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                 <a href="#solutions">Solutions</a>
                 <a href="#about">About</a>
                 <a href="#resources">Resources</a>
-                <a href="#contact" class="cta-button">Start Your Journey</a>
+                <a href="https://calendly.com/celestemjkelly/mj-discovery" class="cta-button" target="_blank" rel="noopener">Start Your Journey</a>
             </div>
         </div>
     </nav>
