--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             <p class="hero-description">We architect end-to-end people strategies that turn your biggest headache into your competitive advantage. Think less chaos, more chess moves.</p>
             <div class="hero-cta">
                 <a href="#" class="cta-button">Get Your Free Assessment</a>
-                <a href="#" class="secondary-button">See How It Works</a>
+                <a href="how-it-works.html" class="secondary-button">See How It Works</a>
             </div>
         </div>
 </div>
