--- a/index.html
+++ b/index.html
@@ -597,7 +597,10 @@
             <p class="hero-subtitle">From C-Suite recruiting to wellness concierge services – your complete human capital solution.</p>
             <p class="hero-description">We architect end-to-end people strategies that turn your biggest headache into your competitive advantage. Think less chaos, more chess moves.</p>
             <div class="hero-cta">
-                <a href="#" class="cta-button">Get Your Free Assessment</a>
+                <a href="https://form.jotform.com/252755770898072"
+   class="cta-button"
+   target="_blank" rel="noopener">
+  Get Your Free Assessment</a>
                 <a href="how-it-works.html" class="secondary-button">See How It Works</a>
             </div>
         </div>
@@ -702,7 +705,10 @@
         <div class="cta-container">
             <h2>Ready to Stop the Madness?</h2>
             <p>Get your free HR assessment and discover exactly where you're leaving money on the table.</p>
-            <a href="#" class="cta-button-large">Get Your Free Assessment</a>
+            <a href="https://form.jotform.com/252755770898072"
+   class="cta-button"
+   target="_blank" rel="noopener">
+  Get Your Free Assessment</a>
         </div>
     </section>
 
